@@ -911,12 +911,16 @@ int display_frame(void)
 	      screenshot_movie_file, screenshot_movie_frame++ );
     screenshot_scr_write( screenshot_movie_name );
 
+#ifdef USE_LIBPNG
+
   } else if( screenshot_movie_record == 2 ) {
 
     snprintf( screenshot_movie_name, 256, "%s-frame-%09ld.png",
 	      screenshot_movie_file, screenshot_movie_frame++ );
     screenshot_save();
     screenshot_write_fast( screenshot_movie_name, screenshot_movie_scaler );
+
+#endif                          /* #ifdef USE_LIBPNG */
 
   }
 
